--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 .nav ul{
     display: flex;
     flex-direction: row;
-    gap: 4rem;
-    padding: 2rem 4rem;
+    gap: 2rem;
+    padding: 0.5rem;
 
 }
 .nav {
@@ -24,5 +24,6 @@
 }
 .userimage{
     border-radius: 50%;
-    height: 3rem;
+    height: 2rem;
+    width: 2rem ;
 }
