--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,8 @@
     height: 2rem;
     width: 2rem ;
 }
+.textfont{
+font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
