--- a/app/users/styles.css
+++ b/app/users/styles.css
@@ -1,15 +1,33 @@
+h2{
+    margin: 1rem 2rem;
+}
 table{
-    width: 75%;
-    margin-top: 1.5rem;
+    width: 90%;
+    margin-top: 2rem;
+    border-collapse: collapse;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
 }
-table tr td{
-    border: 0.05rem #171717 solid;
-}
-
-thead th{
-    border: 0.05rem #171717 solid;
-}
-
 thead{
-    background-color: #d8cfbd;
+    background-color: #ddded9;
+
+}
+table th,td{
+    text-align: left;
+    padding: 1rem 2rem;
+}
+
+table tbody tr{
+    border-bottom: 1px solid #e5e7eb;
+    transition: background-color 0.2s ease-in-out;
+}
+
+table tbody tr:hover {
+    background-color: #f3f4f6;
+  }
+input{
+    background-color: #0046fe;
+    color: antiquewhite;
+    padding: 0.5rem 0.8rem;
 }
