--- a/app/changerole/styles.css
+++ b/app/changerole/styles.css
@@ -1,3 +1,6 @@
 .con{
-    margin: 2rem;
+    margin: auto;
+    margin-top: 8rem;
+    padding: 2rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
